# checkers

./: CMakeLists.txt  README
console-app/: CMakeLists.txt
console-app/src/: CMakeLists.txt  main.cpp
console-ui/src/: AbstractView.cpp  AbstractView.h  BoardView.cpp  BoardView.h  CMakeLists.txt  FramedBoardView.cpp  FramedBoardView.h
console-ui/test/: BoardViewTests.cpp  BoardViewTests.h  CMakeLists.txt  FramedBoardViewTests.cpp  FramedBoardViewTests.h
engine/src/: ActionAtBoard.cpp  ActionAtBoard.h  ActionNoRequestedDraught.cpp  ActionNoRequestedDraught.h  ActionPut.cpp  ActionPut.h  ActionSequence.cpp  ActionSequence.h  ActionTake.cpp  ActionTake.h  ActionThrowError.cpp  ActionThrowError.h  AmericanCheckersActionFactory.cpp  AmericanCheckersActionFactory.h  AmericanCheckersBoardTraits.cpp  AmericanCheckersBoardTraits.h  AmericanCheckersPositionAnalyser.cpp  AmericanCheckersPositionAnalyser.h  BitFlag.h  Board.cpp  Board.h  BoardTraits.h  CMakeLists.txt  Color.cpp  Color.h  ColorBase.cpp  ColorBase.h  Coord.cpp  Coord.h  CoordBase.cpp  CoordBase.h  CoordDelta.cpp  CoordDelta.h  CoordSequence.cpp  CoordSequence.h  Draught.cpp  Draught.h  EngineLogger.h  Error.cpp  Error.h  (+29 more)
engine/test/: AmericanCheckersBoardTraitsTests.cpp  AmericanCheckersBoardTraitsTests.h  AmericanCheckersPositionAnalyserTests.cpp  AmericanCheckersPositionAnalyserTests.h  BoardTests.cpp  BoardTests.h  CMakeLists.txt  ColorTests.cpp  ColorTests.h  CoordDeltaTests.cpp  CoordDeltaTests.h  CoordSequenceTests.cpp  CoordSequenceTests.h  CoordTests.cpp  CoordTests.h  DraughtTests.cpp  DraughtTests.h  MoveTests.cpp  MoveTests.h  PlayerTests.cpp  PlayerTests.h  PlayerTestsMocs.h  PrettyPrint.cpp  PrettyPrint.h  WalkerIterationTests.cpp  WalkerIterationTests.h  WalkerIterationTestsMocs.h  main.cpp
logger/: CMakeLists.txt
logger/src/: CMakeLists.txt  Logger.h  LoggerCallstack.cpp  LoggerCallstack.h  LoggerDefs.h  LoggerManager.cpp  LoggerManager.h  MultilineStream.cpp  MultilineStream.h
logger/test/: CMakeLists.txt  main.cpp
